--- a/src/blocks/components/about/about_f.html
+++ b/src/blocks/components/about/about_f.html
@@ -22,7 +22,7 @@
         приглашаем модель и стилиста, снимаем, ретушируем и всё готово.</p>
       <a href="" class="about__link button-more">Подробнее</a>
     </div>
-    <div class="about__item about__item--4 about__item--video video">
+    <div class="about__item about__item--4 about__item--video">
       @@include("../mini-slider/mini-slider__video.html")
       <h3 class="about__title">Видео </h3>
       <p class="about__text">Подойдет для Инстаграма. Выбираем
