--- a/src/blocks/components/advantages/advantages.html
+++ b/src/blocks/components/advantages/advantages.html
@@ -4,7 +4,9 @@
     <p class="advantages__text">Мы работаем в премииальном сегменте уже 5 лет, поэтому хорошо понимаем специфику.
       В студии есть возможность для любой съёмки: не важно, нужны ли фотографии на манекене
       или детальные,
-      одежды или аксессуаров. Мы найдём моделей, пригласим визажистов и отпарим вещи.</p>
+      одежды или аксессуаров.<span class="advantages__mobile-span"> Мы найдём моделей, пригласим визажистов и отпарим
+        вещи.</span>
+    </p>
     <button class="advantages__button red-button">Заказать съёмку</button>
   </div>
 </section>
