--- a/src/blocks/components/mini-slider/mini-slider__video.html
+++ b/src/blocks/components/mini-slider/mini-slider__video.html
@@ -6,6 +6,8 @@
     <img class="about__poster-img video-poster" src="./img/mini-slider/mini-video.jpg"
       srcset="./img/mini-video@2xjpg 2x" alt="">
   </picture>
-  <video class="video-js video-js--hidden" src="./videos/video.mp4" preload="auto" autoplay="true" loop="true"
-    muted="muted"></video>
+  <a href="/">
+    <video class="video-js video-js--hidden" src="./videos/video.mp4" preload="auto" autoplay="true" loop="true"
+      muted="muted"></video>
+  </a>
 </div>
