--- a/src/blocks/components/photo-price/price.html
+++ b/src/blocks/components/photo-price/price.html
@@ -12,9 +12,11 @@
       с лицом в кадре вместе с видео
       и с фото на манекене</p>
     <div class="price__price-less30 price__container">
+      <span class="price__mobile-title">Менее 30 вещей</span>
       <span class="price__price">956 руб за вещь</span><span class="price__annotation">Включая фото на манекене отпарку,
-        ретушь и цветокоррекцию<br> Участие модели и визажиста оплачиваются отдельно</span></div>
-    <div class="price__price-more30 price__container"><span class="price__price">788 руб за вещь</span><span
+        ретушь и цветокоррекцию. Участие модели и визажиста оплачиваются отдельно</span></div>
+    <div class="price__price-more30 price__container">
+      <span class="price__mobile-title">Более 30 вещей</span><span class="price__price">788 руб за вещь</span><span
         class="price__annotation">Включая фото на манекене отпарку, ретушь и цветокоррекцию<br>
         Участи модели и визажиста оплачиваются отдельно</span>
     </div>
@@ -27,12 +29,16 @@
       без лица в кадре вместе с видео
       и с фото на манекене</p>
     <div class="price__price-less30 price__container">
+      <span class="price__mobile-title">Менее 30 вещей</span>
       <span class="price__price">913 руб за вещь</span><span class="price__annotation">Включая фото на манекене отпарку,
         ретушь и цветокоррекцию<br>
         Участи модели и визажиста оплачиваются отдельно</span></div>
-    <div class="price__price-more30 price__container"><span class="price__price">749 руб за вещь</span><span
-        class="price__annotation">Включая фото на манекене отпарку, ретушь и цветокоррекцию<br>
-        Участи модели и визажиста оплачиваются отдельно</span>
+    <div class="price__price-more30 price__container">
+      <span class="price__mobile-title">Более 30 вещей</span>
+      <span class="price__price">749 руб за вещь</span>
+      <span class="price__annotation">Включая фото на манекене отпарку, ретушь и цветокоррекцию<br>
+        Участи модели и визажиста оплачиваются отдельно
+      </span>
     </div>
   </div>
   <div class="price__row">
@@ -42,10 +48,12 @@
     <p class="price__description">Детская съёмка с лицом в кадре
       вместе с видео и с фото на манекене</p>
     <div class="price__price-less30 price__container">
+      <span class="price__mobile-title">Менее 30 вещей</span>
       <span class="price__price">956 руб за вещь</span><span class="price__annotation">Включая фото на манекене отпарку,
         ретушь и цветокоррекцию<br>
         Участи модели и визажиста оплачиваются отдельно</span></div>
-    <div class="price__price-more30 price__container"><span class="price__price">788 руб за вещь</span><span
+    <div class="price__price-more30 price__container">
+      <span class="price__mobile-title">Более 30 вещей</span><span class="price__price">788 руб за вещь</span><span
         class="price__annotation">Включая фото на манекене отпарку, ретушь и цветокоррекцию<br>
         Участи модели и визажиста оплачиваются отдельно</span>
     </div>
@@ -57,11 +65,14 @@
     <p class="price__description">Предметная съёмка для каталога
     </p>
     <div class="price__price-less30 price__container">
+      <span class="price__mobile-title">Менее 30 вещей</span>
       <span class="price__price">956 руб за вещь</span><span class="price__annotation">Включая фото на манекене отпарку,
         ретушь и цветокоррекцию<br>
         Участи модели и визажиста оплачиваются отдельно</span></div>
-    <div class="price__price-more30 price__container"><span class="price__price">788 руб за вещь</span><span
-        class="price__annotation">Включая фото на манекене отпарку, ретушь и цветокоррекцию<br>
+    <div class="price__price-more30 price__container">
+      <span class="price__mobile-title">Более 30 вещей</span>
+      <span class="price__price">788 руб за вещь</span><span class="price__annotation">Включая фото на манекене отпарку,
+        ретушь и цветокоррекцию<br>
         Участи модели и визажиста оплачиваются отдельно</span>
     </div>
   </div>
