--- a/src/blocks/components/photo-slider/photo-slider-cloth.html
+++ b/src/blocks/components/photo-slider/photo-slider-cloth.html
@@ -1,6 +1,6 @@
 <div class="photo-slider">
   @@include("../close-element/close-element.html")
-  <h1 class="photo-slider__title">Съёмка одежды для интернет-магазина</h1>
+  <h1 class="photo-slider__title">Съёмка одежды для&nbsp;интернет-магазина</h1>
   <div class="photo-slider__slider">
 
     <img src="./img/cloth1.jpg" srcset="./img/cloth1@2x.jpg 2x" alt="" class="photo-slider__image">
@@ -16,8 +16,8 @@
   </div>
   <div class="photo-slider__text">
     <p class="photo-slider__text-line">Стандартная съёмка одной вещи обыкновенно включает фото общего плана,</p>
-    <p class="photo-slider__text-line">фото в приближении в нескольких ракурсах, товар отдельно на манекене,</p>
-    <p class="photo-slider__text-line">несколько фото деталей и короткий видеоролик. Ниже примеры фото различного типа.
+    фото в приближении в нескольких ракурсах, товар отдельно на манекене,
+    несколько фото деталей и короткий видеоролик. Ниже&nbsp;примеры фото различного типа.
     </p>
   </div>
 </div>
