--- a/src/blocks/components/address/address.html
+++ b/src/blocks/components/address/address.html
@@ -3,7 +3,7 @@
   <h1 class="address__title visually-hidden">Адрес фотостудии</h1>
   <div class="address__manager">
     <picture class="address__pic">
-      <source media="(max-width: 768px)" srcset="./img/evgeny_M.jpg 1x, ./img/evgeny_M@2x.jpg 2x">
+      <source media="(max-width: 768px)" srcset="./img/angelica_M.jpg 1x, ./img/angelica_M@2x.jpg 2x">
       <img src="./img/angelica.jpg" srcset="./img/angelica@2x.jpg 2x" alt="" class="address__photo">
     </picture>
     <div class="address__profile">
