--- a/src/blocks/components/advantages/advantages.scss
+++ b/src/blocks/components/advantages/advantages.scss
@@ -55,12 +55,13 @@
 
   .advantages__title {
     @include mobile-middle-title;
+    letter-spacing: 0;
   }
 
   .advantages__text {
     font-size: 4.265vw;
-    padding-left: 5vw;
-    padding-right: 5vw;
+    padding-left: 6vw;
+    padding-right: 6vw;
     line-height: 6.5vw;
   }
 
@@ -71,7 +72,12 @@
     margin: 0 7vw;
     font-size: 4.25vw;
     line-height: 4.5vw;
-    margin-top: 7vw;
+    margin-top: 9vw;
+  }
+
+  .advantages__mobile-span {
+    display: block;
+    padding-top: 6vw;
   }
 
 }
