--- a/src/blocks/components/mini-slider/mini-slider__children.html
+++ b/src/blocks/components/mini-slider/mini-slider__children.html
@@ -1,30 +1,34 @@
 <div class="mini-slider__wrapper mini-slider__wrapper--children about__image">
   <div class="mini-slider__slide-wrapper slide">
-    <picture>
+    <picture class="mini-slider__picture">
       <source media="(min-width: 768px) and (max-width: 1200px)" type="image/jpg"
         srcset="./img/mini-slider/children_T.jpg, ./img/mini-slider/children_T@2x.jpg 2x">
-      <img src="./img/mini-slider/children.jpg" srcset="./img/children@2x.jpg 2x" alt="" class="about__image">
+      <img src="./img/mini-slider/children.jpg" srcset="./img/mini-slider/children@2x.jpg 2x" alt=""
+        class="about__image">
     </picture>
   </div>
   <div class="mini-slider__slide-wrapper slide">
-    <picture>
+    <picture class="mini-slider__picture">
       <source media="(min-width: 768px) and (max-width: 1200px)" type="image/jpg"
         srcset="./img/mini-slider/children_T.jpg, ./img/mini-slider/children_T@2x.jpg 2x">
-      <img src="./img/mini-slider/children.jpg" srcset="./img/children@2x.jpg 2x" alt="" class="about__image">
+      <img src="./img/mini-slider/children.jpg" srcset="./img/mini-slider/children@2x.jpg 2x" alt=""
+        class="about__image">
     </picture>
   </div>
   <div class="mini-slider__slide-wrapper slide">
-    <picture>
+    <picture class="mini-slider__picture">
       <source media="(min-width: 768px) and (max-width: 1200px)" type="image/jpg"
         srcset="./img/mini-slider/children_T.jpg, ./img/mini-slider/children_T@2x.jpg 2x">
-      <img src="./img/mini-slider/children.jpg" srcset="./img/children@2x.jpg 2x" alt="" class="about__image">
+      <img src="./img/mini-slider/children.jpg" srcset="./img/mini-slider/children@2x.jpg 2x" alt=""
+        class="about__image">
     </picture>
   </div>
   <div class="mini-slider__slide-wrapper slide">
-    <picture>
+    <picture class="mini-slider__picture">
       <source media="(min-width: 768px) and (max-width: 1200px)" type="image/jpg"
         srcset="./img/mini-slider/children_T.jpg, ./img/mini-slider/children_T@2x.jpg 2x">
-      <img src="./img/mini-slider/children.jpg" srcset="./img/children@2x.jpg 2x" alt="" class="about__image">
+      <img src="./img/mini-slider/children.jpg" srcset="./img/mini-slider/children@2x.jpg 2x" alt=""
+        class="about__image">
     </picture>
   </div>
 </div>
