--- a/src/blocks/components/mini-slider/mini-slider__clothes.html
+++ b/src/blocks/components/mini-slider/mini-slider__clothes.html
@@ -1,27 +1,27 @@
 <div class="mini-slider__wrapper mini-slider__wrapper--clothes about__image">
   <div class="mini-slider__slide-wrapper slide">
-    <picture>
+    <picture class="mini-slider__picture">
       <source media="(min-width: 768px) and (max-width: 1200px)" type="image/jpg"
         srcset="./img/mini-slider/clothes_T.jpg, ./img/mini-slider/clothes_T@2x.jpg 2x">
       <img src="./img/mini-slider/clothes.jpg" srcset="./img/mini-slider/clothes@2x.jpg 2x" alt="" class="about__image">
     </picture>
   </div>
   <div class="mini-slider__slide-wrapper slide">
-    <picture>
+    <picture class="mini-slider__picture">
       <source media="(min-width: 768px) and (max-width: 1200px)" type="image/jpg"
         srcset="./img/mini-slider/clothes_T.jpg, ./img/mini-slider/clothes_T@2x.jpg 2x">
       <img src="./img/mini-slider/clothes.jpg" srcset="./img/mini-slider/clothes@2x.jpg 2x" alt="" class="about__image">
     </picture>
   </div>
   <div class="mini-slider__slide-wrapper slide">
-    <picture>
+    <picture class="mini-slider__picture">
       <source media="(min-width: 768px) and (max-width: 1200px)" type="image/jpg"
         srcset="./img/mini-slider/clothes_T.jpg, ./img/mini-slider/clothes_T@2x.jpg 2x">
       <img src="./img/mini-slider/clothes.jpg" srcset="./img/mini-slider/clothes@2x.jpg 2x" alt="" class="about__image">
     </picture>
   </div>
   <div class="mini-slider__slide-wrapper slide">
-    <picture>
+    <picture class="mini-slider__picture">
       <source media="(min-width: 768px) and (max-width: 1200px)" type="image/jpg"
         srcset="./img/mini-slider/clothes_T.jpg, ./img/mini-slider/clothes_T@2x.jpg 2x">
       <img src="./img/mini-slider/clothes.jpg" srcset="./img/mini-slider/clothes@2x.jpg 2x" alt="" class="about__image">
