--- a/src/blocks/components/mini-slider/mini-slider__things.html
+++ b/src/blocks/components/mini-slider/mini-slider__things.html
@@ -1,6 +1,6 @@
 <div class="mini-slider__wrapper mini-slider__wrapper--things about__image">
   <div class="mini-slider__slide-wrapper slide">
-    <picture>
+    <picture class="mini-slider__picture">
       <source media="(min-width: 768px) and (max-width: 1200px)" type="image/jpg"
         srcset="./img/mini-slider/things_T.jpg, ./img/mini-slider/things_T@2x.jpg 2x">
       <img src="./img/mini-slider/info-bag.jpg" srcset="./img/mini-slider/info-bag@2x.jpg 2x" alt=""
@@ -8,7 +8,7 @@
     </picture>
   </div>
   <div class="mini-slider__slide-wrapper slide">
-    <picture>
+    <picture class="mini-slider__picture">
       <source media="(min-width: 768px) and (max-width: 1200px)" type="image/jpg"
         srcset="./img/mini-slider/things_T.jpg, ./img/mini-slider/things_T@2x.jpg 2x">
       <img src="./img/mini-slider/info-bag.jpg" srcset="./img/mini-slider/info-bag@2x.jpg 2x" alt=""
@@ -16,7 +16,7 @@
     </picture>
   </div>
   <div class="mini-slider__slide-wrapper slide">
-    <picture>
+    <picture class="mini-slider__picture">
       <source media="(min-width: 768px) and (max-width: 1200px)" type="image/jpg"
         srcset="./img/mini-slider/things_T.jpg, ./img/mini-slider/things_T@2x.jpg 2x">
       <img src="./img/mini-slider/info-bag.jpg" srcset="./img/mini-slider/info-bag@2x.jpg 2x" alt=""
@@ -24,7 +24,7 @@
     </picture>
   </div>
   <div class="mini-slider__slide-wrapper slide">
-    <picture>
+    <picture class="mini-slider__picture">
       <source media="(min-width: 768px) and (max-width: 1200px)" type="image/jpg"
         srcset="./img/mini-slider/things_T.jpg, ./img/mini-slider/things_T@2x.jpg 2x">
       <img src="./img/mini-slider/info-bag.jpg" srcset="./img/mini-slider/info-bag@2x.jpg 2x" alt=""
