--- a/src/blocks/components/mobile-menu/mobile-menu.html
+++ b/src/blocks/components/mobile-menu/mobile-menu.html
@@ -4,15 +4,11 @@
     <span class="mobile-menu__phone">8-905-779-62-32</span>
   </div>
   <ul class="mobile-menu__list">
-    <li class="mobile-menu__item">
-      <a href="delivery-with-fitting.html" class="mobile-menu__link">
-        Доставка с примеркой
-      </a>
-    </li>
-    <li class="mobile-menu__item"><a href="pvz.html" class="mobile-menu__link">Пункты выдачи заказов</a></li>
-    <li class="mobile-menu__item"><a href="package.html" class="mobile-menu__link">Упаковка</a></li>
+    <li class="mobile-menu__item"><a href="clothes.html" class="mobile-menu__link">Съёмка одежды</a></li>
+    <li class="mobile-menu__item"><a href="things.html" class="mobile-menu__link">Предметная</a></li>
+    <li class="mobile-menu__item"><a href="children.html" class="mobile-menu__link">Детская</a></li>
+    <li class="mobile-menu__item"><a href="video.html" class="mobile-menu__link">Видео</a></li>
+    <li class="mobile-menu__item"><a href="address.html" class="mobile-menu__link">Контакты</a></li>
     <li class="mobile-menu__item"><a href="prices.html" class="mobile-menu__link">Цены</a></li>
-    <li class="mobile-menu__item"><a href="address.html" class="mobile-menu__link">Адрес</a></li>
-    <li class="mobile-menu__item"><a href="" class="mobile-menu__link">Задать вопрос</a></li>
   </ul>
 </section>
