--- a/src/blocks/components/photo-price/price.scss
+++ b/src/blocks/components/photo-price/price.scss
@@ -75,3 +75,132 @@
   @include fontMuseoLight12;
   line-height: 17px;
 }
+
+.price__mobile-title {
+  display: none;
+}
+
+/*Мобильная версия: BEGIN*/
+
+@media (max-width: 768px) {
+  .price__title {
+    font-size: $m-title-xl;
+    padding-top: 4.5vw;
+    padding-left: 5vw;
+    padding-bottom: 5vw;
+  }
+
+  .price__header {
+    display: none;
+  }
+
+  .price__row {
+    flex-wrap: wrap;
+    padding: 0 3vw;
+    justify-content: space-between;
+    margin-bottom: 10vw;
+  }
+
+  .price__picture {
+    width: 27vw;
+    margin-bottom: 2vw;
+  }
+
+  .price__mobile-title {
+    display: block;
+  }
+
+  .price__description {
+    font-size: $m-text-xs;
+    width: 65vw;
+    box-sizing: border-box;
+    padding: 4vw 17vw 3.5vw 3vw;
+    line-height: 6.5vw;
+    margin-bottom: 2vw;
+  }
+
+  .price__container {
+    width: 46vw;
+    margin-left: 0;
+    padding-top: 3.5vw;
+    padding-left: 4vw;
+    padding-bottom: 5vw;
+  }
+
+  .price__mobile-title {
+    font-size: $m-text-xxxs;
+    padding-bottom: 1vw;
+  }
+
+  .price__price {
+    font-size: $m-text-l;
+    padding-bottom: 2vw;
+  }
+
+  .price__annotation {
+    font-size: $m-text-xxxxs;
+    line-height: 5.2vw;
+  }
+}
+
+/*Мобильная версия: END*/
+
+/*Планшетная версия: BEGIN*/
+@media (min-width: 768px) and (max-width: 1200px) {
+
+  .price {
+    padding: 0 3.5vw;
+    margin-bottom: 7vw;
+  }
+
+  .price__title {
+    font-size: $t-title-s;
+    line-height: 3vw;
+    padding-top: 1.8vw;
+  }
+
+  .price__row {
+    margin-bottom: 0.5vw;
+  }
+
+  .price__header-title {
+    font-size: $t-text-xs;
+    line-height: 1.5vw;
+    margin-top: 0vw;
+    padding-left: 1.6vw;
+    padding-right: 0vw;
+    width: 22.4vw;
+    margin-left: 1vw;
+    margin-bottom: 1vw;
+    box-sizing: border-box;
+  }
+
+  .price__picture {
+    width: 8.75vw;
+  }
+
+  .price__description {
+    font-size: $t-text-s;
+    line-height: 2vw;
+    padding-top: 2vw;
+    padding-left: 1.8vw;
+    margin-left: 0.5vw;
+  }
+
+  .price__container {
+    margin-left: 0.5vw;
+    padding-top: 1vw;
+  }
+
+  .price__price {
+    font-size: $t-text-s;
+    padding-bottom: 0;
+  }
+
+  .price__annotation {
+    font-size: $t-text-xxs;
+    line-height: 1.5vw;
+  }
+}
+
+/*Планшетная версия: END*/
