--- a/src/blocks/modules/header/header.scss
+++ b/src/blocks/modules/header/header.scss
@@ -115,11 +115,16 @@
 @media (max-width: 768px) {
   .header-top__wrapper {
     padding-top: 4vw;
-    padding-bottom: 5vw;
+    padding-bottom: 7vw;
   }
 
   .header-top {
     padding-bottom: 0;
+  }
+
+  .header-top__logo {
+    margin-left: 0px;
+    margin-top: 1vw;
   }
 
   .secondary-nav {
@@ -150,10 +155,18 @@
     padding-top: 0;
   }
 
+  .header__promo {
+    padding: 1vw 1vw 0vw;
+  }
+
+  .promo__text {
+    padding-right: 5vw;
+  }
+
   .header__promo .promo__text {
     margin-top: 2.5vw;
     margin-left: 14vw;
-    font-size: 3.5vw;
+    font-size: $m-text-xxxs;
     line-height: 5vw;
     text-align: left;
     margin-bottom: 3vw;
