--- a/src/styles/helpers/_mixins.scss
+++ b/src/styles/helpers/_mixins.scss
@@ -86,6 +86,18 @@
   left: -3vw;
 }
 
+@mixin sliderButton {
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background-color: $mini-slider-dots;
+  opacity: 0.3;
+  border: none;
+  display: block;
+  padding: 0;
+  margin: 0 1vw;
+}
+
 /*BLOCKS END*/
 
 /*Микисины шрифтов :BEGIN*/
