Доработал лендинг - всплытие блоков и мелкие правки

--- a/src/blocks/components/about/about_f.html
+++ b/src/blocks/components/about/about_f.html
@@ -1,5 +1,5 @@
-<section class="about">
-  <div class="about-wrapper video-slide">
+<section class="about fade-block">
+  <div class="about-wrapper video-slide fade-up-block">
     <div class="about__item about__item--4">
       @@include("../mini-slider/mini-slider__clothes.html")
       <h3 class="about__title">Съёмка одежды</h3>
