--- a/src/blocks/components/address/address.html
+++ b/src/blocks/components/address/address.html
@@ -1,5 +1,5 @@
-<section class="address print">
-  @@include("../close-element/close-element.html")
+<section class="address print fade-block">
+  @@include("../close-element/close-element-front.html")
   <h1 class="address__title visually-hidden">Адрес фотостудии</h1>
   <div class="address__manager">
     <picture class="address__pic">
