--- a/src/blocks/components/photo-price/price.html
+++ b/src/blocks/components/photo-price/price.html
@@ -1,4 +1,5 @@
-<section class="price">
+<section class="price fade-block">
+  @@include("../close-element/close-element-front.html")
   <h2 class="price__title">Цены</h2>
   <div class="price__header">
     <p class="price__title-less30 price__header-title">Менее 30 вещей</p>
