--- a/src/blocks/components/advantages/advantages.html
+++ b/src/blocks/components/advantages/advantages.html
@@ -1,4 +1,4 @@
-<section class="advantages">
+<section class="advantages fade-block">
   <div class="advantages__wrapper">
     <h2 class="advantages__title">Преимущества работы с нами</h2>
     <p class="advantages__text">Мы работаем в премииальном сегменте уже 5 лет, поэтому хорошо понимаем специфику.
