--- a/src/blocks/components/main-slider/main-slider.html
+++ b/src/blocks/components/main-slider/main-slider.html
@@ -1,4 +1,4 @@
-<section class="main-slider slider-wrapper">
+<section class="main-slider slider-wrapper fade-block">
   <div class="slider__wrapper">
     <div class="slider__slide-wrapper slide">
       <picture class="slider__picture">
