--- a/src/blocks/components/photo-slider/photo-slider-cloth.html
+++ b/src/blocks/components/photo-slider/photo-slider-cloth.html
@@ -1,5 +1,5 @@
-<div class="photo-slider">
-  @@include("../close-element/close-element.html")
+<section class="photo-slider fade-block">
+  @@include("../close-element/close-element-front.html")
   <h1 class="photo-slider__title">Съёмка одежды для&nbsp;интернет-магазина</h1>
   <div class="photo-slider__slider">
 
@@ -20,4 +20,4 @@
     несколько фото деталей и короткий видеоролик. Ниже&nbsp;примеры фото различного типа.
     </p>
   </div>
-</div>
+</section>
