--- a/src/blocks/components/photo-slider/photo-slider-things.html
+++ b/src/blocks/components/photo-slider/photo-slider-things.html
@@ -1,5 +1,5 @@
-<div class="photo-slider">
-  @@include("../close-element/close-element.html")
+<section class="photo-slider fade-block">
+  @@include("../close-element/close-element-front.html")
   <h1 class="photo-slider__title">Съёмка одежды для интернет-магазина</h1>
   <div class="photo-slider__slider">
 
@@ -22,4 +22,4 @@
     <p class="photo-slider__text-line">несколько фото деталей и короткий видеоролик. Ниже примеры фото различного типа.
     </p>
   </div>
-</div>
+</section>
