--- a/src/blocks/components/photo-slider/photo-slider-video.html
+++ b/src/blocks/components/photo-slider/photo-slider-video.html
@@ -1,11 +1,11 @@
-<div class="photo-slider">
-  @@include("../close-element/close-element.html")
+<section class="photo-slider fade-block">
+  @@include("../close-element/close-element-front.html")
   <h1 class="photo-slider__title">Съёмка одежды для интернет-магазина</h1>
   <div class="photo-slider__slider video-slider">
     <div class="photo-slider__item photo-slider__item--video photo-slider__item--video1 video">
       @@include("../video-button/video-button.html")
       <picture class='photo-slider__picture picture-video-js'>
-        <img class="photo-slider__image video-poster" src="./img/video.jpg" srcset="./img/video@2xjpg 2x" alt="">
+        <img class="photo-slider__image video-poster" src="./img/video.jpg" srcset="./img/video@2x.jpg 2x" alt="">
       </picture>
       <video class="video-js video-js--hidden" src="./videos/video.mp4" preload="auto" autoplay="true" loop="true"
         muted="muted"></video>
@@ -13,7 +13,7 @@
     <div class="photo-slider__item photo-slider__item--video photo-slider__item--video2 video">
       @@include("../video-button/video-button.html")
       <picture class='photo-slider__picture picture-video-js'>
-        <img class="photo-slider__image video-poster" src="./img/video-2.jpg" srcset="./img/video-2@2xjpg 2x" alt="">
+        <img class="photo-slider__image video-poster" src="./img/video-2.jpg" srcset="./img/video-2@2x.jpg 2x" alt="">
       </picture>
       <video class="video-js video-js--hidden" src="./videos/video.mp4" preload="auto" autoplay="true" loop="true"
         muted="muted"></video>
@@ -21,7 +21,7 @@
     <div class="photo-slider__item photo-slider__item--video photo-slider__item--video3 video">
       @@include("../video-button/video-button.html")
       <picture class='photo-slider__picture picture-video-js'>
-        <img class="photo-slider__image video-poster" src="./img/video-3.jpg" srcset="./img/video-3@2xjpg 2x" alt="">
+        <img class="photo-slider__image video-poster" src="./img/video-3.jpg" srcset="./img/video-3@2x.jpg 2x" alt="">
       </picture>
       <video class="video-js video-js--hidden" src="./videos/video.mp4" preload="auto" autoplay="true" loop="true"
         muted="muted"></video>
@@ -29,7 +29,7 @@
     <div class="photo-slider__item photo-slider__item--video photo-slider__item--video4 video">
       @@include("../video-button/video-button.html")
       <picture class='photo-slider__picture picture-video-js'>
-        <img class="photo-slider__image video-poster" src="./img/video.jpg" srcset="./img/video@2xjpg 2x" alt="">
+        <img class="photo-slider__image video-poster" src="./img/video.jpg" srcset="./img/video@2x.jpg 2x" alt="">
       </picture>
       <video class="video-js video-js--hidden" src="./videos/video.mp4" preload="auto" autoplay="true" loop="true"
         muted="muted"></video>
@@ -37,7 +37,7 @@
     <div class="photo-slider__item photo-slider__item--video photo-slider__item--video5 video">
       @@include("../video-button/video-button.html")
       <picture class='photo-slider__picture picture-video-js'>
-        <img class="photo-slider__image video-poster" src="./img/video-2.jpg" srcset="./img/video-2@2xjpg 2x" alt="">
+        <img class="photo-slider__image video-poster" src="./img/video-2.jpg" srcset="./img/video-2@2x.jpg 2x" alt="">
       </picture>
       <video class="video-js video-js--hidden" src="./videos/video.mp4" preload="auto" autoplay="true" loop="true"
         muted="muted"></video>
@@ -45,7 +45,7 @@
     <div class="photo-slider__item photo-slider__item--video photo-slider__item--video6 video">
       @@include("../video-button/video-button.html")
       <picture class='photo-slider__picture picture-video-js'>
-        <img class="photo-slider__image video-poster" src="./img/video-3.jpg" srcset="./img/video-3@2xjpg 2x" alt="">
+        <img class="photo-slider__image video-poster" src="./img/video-3.jpg" srcset="./img/video-3@2x.jpg 2x" alt="">
       </picture>
       <video class="video-js video-js--hidden" src="./videos/video.mp4" preload="auto" autoplay="true" loop="true"
         muted="muted"></video>
@@ -59,4 +59,4 @@
 
 
   </div>
-</div>
+</section>
