--- a/src/blocks/components/request-form/request-form.html
+++ b/src/blocks/components/request-form/request-form.html
@@ -1,4 +1,4 @@
-<section class="request-form ">
+<section class="request-form fade-block">
   <div class="request-form__wrapper">
     <h2 class="request-form__title">Воспользуйтесь формой заявки</h2>
     <p class="request-form__info">Узнайте больше! Будем рады подробнее рассказать о нашем сервисе и ответить на
