--- a/src/views/pages/children.html
+++ b/src/views/pages/children.html
@@ -38,6 +38,7 @@
   @@include("../../blocks/components/request-form/request-form1.html")
   @@include("../../blocks/components/about/about.html")
   @@include("../../blocks/modules/footer/footer.html")
+  @@include("../../blocks/components/overlay/overlay.html")
   <script src="./js/main.js"></script>
   <script src="./js/vendor.js"></script>
 </body>
